# scrabble

./: .gitignore  Cargo.toml
.cargo/: config.toml
scrabble-core/: Cargo.toml
scrabble-core/src/: array.rs  letter.rs  lib.rs  tile.rs
scrabble-core/src/board/: default.rs  error.rs  mod.rs
scrabble-ui/: Cargo.toml
scrabble-ui/shaders/: basic.frag
scrabble-ui/src/: lib.rs  webgl_test.rs
scrabble-ui/static/: index.html
xtask/src/: main.rs
